Fix lots of typos. By Jan van Male <jan.vanmale@fenk.wau.nl>.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -94,7 +94,7 @@ the appropriate policies.</p>
 <dl>
   <dt>Global write permission.</dt> <dd>A very limited number of
   developers have global write permission over the entire
-  repostiory.</dd>
+  repository.</dd>
 
   <dt>Localized write permission.</dt> <dd>This is for people who have
   primary responsibility for ports, front ends, or significant hunks
@@ -228,7 +228,7 @@ Sun Feb  8 08:02:13 1998  John Carr  &lt;jfc@mit.edu>
 </pre>
 </blockquote>
 
-<h3>First, I sync my local respository.</h3>
+<h3>First, I sync my local repository.</h3>
 
 <blockquote>
 <pre>
