--- a/htdocs/egcs-1.0/egcs-1.0.2.html
+++ b/htdocs/egcs-1.0/egcs-1.0.2.html
@@ -19,7 +19,7 @@ serious problems in EGCS 1.0.1.
 <ul>
   <li> General improvements and fixes
   <ul>
-    <li> Memory comsumption significantly reduced, especially for templates
+    <li> Memory consumption significantly reduced, especially for templates
        and inline functions.
     <li> Fix various problems with glibc2.1.
     <li> Fix loop optimization bug exposed by rs6000/ppc port.
