--- a/htdocs/egcs-1.1/features.html
+++ b/htdocs/egcs-1.1/features.html
@@ -40,7 +40,7 @@
   <li> The compiler now supports an extensive "--help" option.
   <li> cpplib has been greatly improved and may be suitable for limited use.
   <li> Memory footprint for the compiler has been significantly reduced
-  for some pathalogical cases.
+  for some pathological cases.
   <li> The time to build EGCS has been improved for certain targets
   (particularly the alpha and mips platforms).
   <li> Many infrastructure improvements throughout the compiler, plus the
