--- a/htdocs/egcs-1.1/schedule.html
+++ b/htdocs/egcs-1.1/schedule.html
@@ -29,7 +29,7 @@ EGCS 1.1 branch</a>.
 <p> July 7, 1998.  The <a href="EGCS 1.1-test.html">testing plan</a> is not
     ready yet, but we are actively working on solidifying the testing plan.
 
-<p>The tenative schedule for the EGCS 1.1 release is:
+<p>The tentative schedule for the EGCS 1.1 release is:
 
 <ul>
   <li> <b>July 3, 1998. Feature freeze date</b>.
@@ -40,7 +40,7 @@ EGCS 1.1 branch</a>.
 
   <p> It is also possible some patches which have been submitted and are
   accepted for EGCS 1.1 will not have been installed by this date due to
-  EOQ committments for many of the Cygnus volunteers.
+  EOQ commitments for many of the Cygnus volunteers.
 
   <p> After July 3, 1998, only bugfix submissions will be considered for
   the EGCS 1.1 release.
