--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -53,7 +53,7 @@ installation on non-Sun systems or when using GNU make.</p>
 <p><code>Libg++</code>, the GNU C++ library, is an attempt to
 provide a variety of C++ programming tools and other support to
 GNU C++ programmers.  It has been available for quite some time
-now, and, although it has been superceeded by <code>libstdc++</code>,
+now, and, although it has been superseded by <code>libstdc++</code>,
 it is still providing some useful services. And, it has proven to
 be a good testsuite for the compiler...
 
