--- a/htdocs/gcc-2.95/caveats.html
+++ b/htdocs/gcc-2.95/caveats.html
@@ -10,7 +10,7 @@
 <ul>
   <li>GCC 2.95 will issue an error for invalid asm statements that had been
   silently accepted by earlier versions of the compiler.  This is particularly
-  noticable when compiling older versions of the Linux kernel (2.0.xx).
+  noticeable when compiling older versions of the Linux kernel (2.0.xx).
   Please refer to the <a href="../faq.html#asmclobber">FAQ</a> for more
   information on this issue.
    
