--- a/htdocs/gcc-2.95/gcc-2.95.1.html
+++ b/htdocs/gcc-2.95/gcc-2.95.1.html
@@ -47,7 +47,7 @@ release.
 	<li> Fix weak symbol handling for rs6000/ppc svr4 targets.
 	<li> Fix various problems with 64bit code generation for the rs6000/ppc
 	     port.
-        <li> Fix codegen bug which cuased tetex to be mis-compiled on the x86
+        <li> Fix codegen bug which caused tetex to be mis-compiled on the x86
 	<li> Fix compiler abort in new cfg code exposed by x86 port.
 	<li> Fix out of range array reference in code convert flat
 	     registers to the x87 stacked FP register file.
