--- a/htdocs/gcc-2.95/gcc-2.95.2.html
+++ b/htdocs/gcc-2.95/gcc-2.95.2.html
@@ -25,7 +25,7 @@ old non-conforming code.
 <p>The GCC developers are experimenting with ways to warn users about code
 which violates the C/C++ standards, but those warnings are not ready for
 widespread use at this time.  Rather than wait for those warnings the GCC
-developers have choosen to disable -fstrict-aliasing by default for the
+developers have chosen to disable -fstrict-aliasing by default for the
 GCC 2.95.2 release.
 
 <p>We <b>strongly</b> encourage developers to find and fix code which violates
