--- a/htdocs/gcc-2.95/schedule.html
+++ b/htdocs/gcc-2.95/schedule.html
@@ -66,7 +66,7 @@ we will not have to slip the schedule further.
   this date only critical bugfixes will be accepted for inclusion in GCC 2.95
   (original critical bugfreeze date was June 15, 1999).
 
-  <p> <li> <b>July 8, 1999. Tenative Release date</b>.
+  <p> <li> <b>July 8, 1999. Tentative Release date</b>.
   <p>July 8, 1999 is the updated target date for the actual release
   (original date was July 1, 1999).
 </ul>
