--- a/htdocs/gcc-3.0/criteria.html
+++ b/htdocs/gcc-3.0/criteria.html
@@ -118,7 +118,7 @@ at least bootstrap itself on each of these secondary platforms.  That
 commitment doesn't necessarily mean fixing bugs personally; for
 example, if you are a manager for a company with GCC expertise you
 could be the volunteer if you'll commit to donating your employee's
-efforst as necessary.  The release manager, and the GCC development
+efforts as necessary.  The release manager, and the GCC development
 team, will make reasonable efforts to assist these volunteers by
 answering questions and reviewing patches as time permits.</p>
 
@@ -170,7 +170,7 @@ any of these tests which the previous release GCC passed on any of the
 supported platforms.  In particular, the current regression testsuite
 will be run using GCC 2.95.2 on each of the supported platforms; those
 results can then be compared with the output from a release candidate.
-Becuase there have often been issues with generating PIC code, we will
+Because there have often been issues with generating PIC code, we will
 test with <code>-fPIC</code> as well.</p>
 
 <p>In addition, on all supported platforms, there will be no
