--- a/htdocs/gcc-3.0/lapack-guide.html
+++ b/htdocs/gcc-3.0/lapack-guide.html
@@ -62,7 +62,7 @@ Mb of objects, libraries and executables to this.</p>
 without specifying the <code>-femulate-complex</code> flag.  Building it
 using GCC 3.0 should not need that flag.</p>
 
-<p>On Alpha's it is necessary to add the flag <code>-mieee</code> to OPTS,
+<p>On Alphas it is necessary to add the flag <code>-mieee</code> to OPTS,
 NOOPT and LOADOPTS.</p>
 
 <h2>Run</h2>
