--- a/htdocs/gcc-3.0/libgcc.html
+++ b/htdocs/gcc-3.0/libgcc.html
@@ -100,7 +100,7 @@ that message is paraphrased here:
    <code>libgcc</code> in the C library.</p>
 
 <p>The GNU C library project needs to be made aware of these
-   conclusions, as they may need to take actions that faciliate this
+   conclusions, as they may need to take actions that facilitate this
    policy in new versions of the GNU C library.</p>
 </body>
 </html>
