--- a/htdocs/gnats.html
+++ b/htdocs/gnats.html
@@ -97,7 +97,7 @@ does not foo", "objc crashes when doing bar".</dd>
   <dt>objc</dt>
   <dd>A problem with the Objective C compiler.</dd>
   <dt>optimization</dt>
-  <dd>A problem only occuring under optimization.</dd>
+  <dd>A problem only occurring under optimization.</dd>
   <dt>target</dt>
   <dd>The problem depends on the specific target architecture.</dd>
   <dt>web</dt>
@@ -111,7 +111,7 @@ does not foo", "objc crashes when doing bar".</dd>
 <dd>A classification of the problem; one of
   <dl>
   <dt>doc-bug</dt>
-  <dd>The doumentation is incorrect.</dd>
+  <dd>The documentation is incorrect.</dd>
   <dt>accepts-illegal</dt>
   <dd>GCC fails to reject erroneous code.</dd>
   <dt>rejects-legal</dt>
