--- a/htdocs/projects/bp/main.html
+++ b/htdocs/projects/bp/main.html
@@ -638,8 +638,8 @@ Fixes appear in 2.0h</p>
     beginning of a string buffer when presented with an empty line.
     </ul>
 
-<p>100% of the test suite passes after fixing the bug listed above,
-and compliling with ``<code>gcc ... -fno-strict-aliasing</code>''.
+<p>100% of the test suite passes after fixing the bug listed above
+and compiling with ``<code>gcc ... -fno-strict-aliasing</code>''.
 A strict-aliasing bug for i586 and i686 caused two assertion failures
 in <code>kpathsea</code>.</p>
 
