--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -47,7 +47,7 @@ number is maintained.</p>
 <h2><a name="historical">Historical</a></h2>
 
 <p>If you have evidence for a missing release date, please send it in.
-Numbers in parens are EGCS release numbers. </p>
+Numbers in parentheses are EGCS release numbers. </p>
 
 <table border=1 cellspacing=0 cellpadding=5>
 <tr><th>GCC Version</th><th>Release date</th></tr>
