--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -87,7 +87,7 @@ it to the list.
 <p>When posting messages, please select an appropriate list for the message
 and try to avoid cross posting a message to several lists.
 
-<p>Please refrain from sending messages in HTML, RTF or similiar formats.</p>
+<p>Please refrain from sending messages in HTML, RTF or similar formats.</p>
 
 
 <h2>Archives</h2>
