Delete obsolete values related to "egcs". Label mailing lists "gcc", not "gcc / egcs"; instead mention contents of egcs mailing lists above tick-boxes.

--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -47,9 +47,8 @@ The search will include what you marked below and
 <select name=restrict>
 <option selected value="">
 if nothing is marked, all pages.
-<!-- These two match all mailing lists, although "e" for egcs may not be
-     indexed at the moment.  -->
-<option value="/ml/e|/ml/g">
+<!-- Small pattern that matches all mailing lists.  -->
+<option value="/ml/g">
 all mailing lists.
 <!-- By not mentioning (.or)g/ml for the mailing lists, we exclude them
      and "restrict" to everything else.  Since we're in a restrict
@@ -85,20 +84,20 @@ Benchmark results</a>
 <br>
 <p>
 <font size=-1>
-Mailing lists.  Ticking a box is like marking all dates for that list:
+Mailing lists, including those for the old egcs project.  Ticking a box is like marking all dates for that list:
 </font>
 <table>
 <tr align=left>
 <th>
-<input type=checkbox name=restrict value="/ml/egcs/|/ml/gcc/">
-<font size=-1> gcc / egcs</font>
+<input type=checkbox name=restrict value="/ml/gcc/">
+<font size=-1> gcc</font>
 </th>
 <th>
-<input type=checkbox name=restrict value="/ml/egcs-bugs|/ml/gcc-bugs/">
+<input type=checkbox name=restrict value="/ml/gcc-bugs/">
 <font size=-1> ...-bugs</font>
 </th>
 <th>
-<input type=checkbox name=restrict value="/ml/egcs-patches|/ml/gcc-patches">
+<input type=checkbox name=restrict value="/ml/gcc-patches">
 <font size=-1> ...-patches</font>
 </th>
 <th>
@@ -108,7 +107,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <th>
 <!-- We do not want to match gcc-cvs-wwwdocs here, so keep the
      final "/".  -->
-<input type=checkbox name=restrict value="/ml/egcs-cvs/|/ml/gcc-cvs/">
+<input type=checkbox name=restrict value="/ml/gcc-cvs/">
 <font size=-1> ...-cvs</font>
 </th>
 <th>
@@ -116,7 +115,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <font size=-1> ...-testresults</font>
 </th>
 <th>
-<input type=checkbox name=restrict value="/ml/egcs-announce|/ml/gcc-announce">
+<input type=checkbox name=restrict value="/ml/gcc-announce">
 <font size=-1> ...-announce</font>
 </th>
 <th>
