Update a couple of entries.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -20,7 +20,8 @@ if you are mirroring the GCC pages so we can note it here!
 <LI>Brasil (releases only, no snapshots): <A HREF="ftp://ftp.unicamp.br/pub/gnu/=EXTRA=/cygnus/egcs/">ftp.unicamp.br</a>
 <li>Canada (releases only, no snapshots): <a href="ftp://ftp.crc.ca/pub/packages/egcs/">ftp.crc.ca</a>
 <li>China (Hong Kong): <a href="ftp://ftp.foruto.com/pub/gcc.gnu.org/egcs/">ftp.foruto.com</a>
-<li>Czech Republic: <a href="ftp://sunsite.mff.cuni.cz/pub/GNU/egcs/">sunsite.mff.cuni.cz</a>
+<li>Czech Republic: <a href="ftp://sunsite.mff.cuni.cz/GNU/gcc/">sunsite.mff.cuni.cz</a>
+<li>Finland: <a href="ftp://ftp.funet.fi/pub/mirrors/sourceware.cygnus.com/pub/gcc/">ftp.funet.fi</a>
 <li>France (releases only, no snapshots): <a href="ftp://ftp.ilog.fr/pub/Mirrors/gcc/">ftp.ilog.fr</a>
 <li>France (releases only, no snapshots): <a href="ftp://ftp.lip6.fr/pub/egcs/">ftp.lip6.fr</a>
 <li>France (Brittany, releases only, no snapshots): <a href="ftp://ftp.irisa.fr/pub/mirrors/egcs.cygwin.com/gcc/">ftp.irisa.fr</a>
@@ -84,7 +85,6 @@ where the mirror is located.
 <!-- <li>Japan: <a href="ftp://ring.nacsis.ac.jp/pub/lang/egcs">ring.nacsis.ac.jp</a> !-->
 <!-- <li>Japan: <a href="ftp://ring.exp.fujixerox.co.jp/pub/lang/egcs">ring.exp.fujixerox.co.jp</a> !-->
 <!-- <li>Japan: <a href="ftp://ring.ip-kyoto.ad.jp/pub/lang/egcs">ring.ip-kyoto.ad.jp</a> !-->
-<!-- <li>Finland (no snapshots): <a href="ftp://ftp.funet.fi/mirrors/ftp.cygnus.com/pub/egcs">ftp.funet.fi</a> !-->
 
 </body>
 </html>
