--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -42,7 +42,7 @@ if you are mirroring the GCC pages so we can note it here!
 <li>Japan: <a href="ftp://ring.crl.go.jp/pub/lang/egcs/">ring.crl.go.jp</a>
 <li>Japan: <a href="ftp://core.ring.gr.jp/pub/lang/egcs/">core.ring.gr.jp</a>
 <li>Japan: <a href="ftp://ftp.ring.gr.jp/pub/lang/egcs/">ftp.ring.gr.jp</a>
-<LI>Nijmegen, Netherlands: <A HREF="ftp://ftp.nluug.nl/pub/languages/gcc">ftp.nluug.nl</a>, thanks to <a href="mailto:jc@ATComputing.nl">Jan Cristiaan van Winkel</a>!
+<LI>Nijmegen, Netherlands: <A HREF="ftp://ftp.nluug.nl/mirror/languages/gcc">ftp.nluug.nl</a>, thanks to <a href="mailto:jc@ATComputing.nl">Jan Cristiaan van Winkel</a>!
 <LI>Norway: <a href="ftp://ftp.pvv.ntnu.no/pub/egcs/">ftp.pvv.ntnu.no</a>
 <LI>Poland: <A HREF="ftp://ftp.task.gda.pl/mirror/egcs.cygnus.com/pub/egcs/">ftp.task.gda.pl</a>
 <LI>Poland (Warsaw): <A HREF="ftp://sunsite.icm.edu.pl/pub/programming/egcs/">sunsite.icm.edu.pl</a>
