We are especially concerned about free systems. Use GNU/Linux where appropriate.

--- a/htdocs/gcc-3.0/criteria.html
+++ b/htdocs/gcc-3.0/criteria.html
@@ -107,6 +107,10 @@ ships, but the performance on these systems will be of considerable
 interest, and it is likely that serious problems on these platforms
 will delay the release.</p>
 
+<p>Among the secondary evaluation platforms, we are are especially
+concerned about free systems (i.e., GNU/Linux and the BSDs) where GCC
+also serves as the system compiler.</p>
+
 <p>Volunteers will be required, both to test and to fix bugs, for all
 secondary platforms.  (These volunteers may be the same person, but
 volunteers should be careful not to sign up for more work than they can
@@ -127,11 +131,11 @@ answering questions and reviewing patches as time permits.</p>
 <tr><th>Chip     <th>OS                  <th>Triplet
     <th>Tester
 <tr><td>Intel x86<td>FreeBSD 4.0         <td>i386-unknown-freebsdelf
-<tr><td>PowerPC  <td>Linux               <td>
+<tr><td>PowerPC  <td>GNU/Linux           <td>
 <tr><td>SPARC    <td>SunOS 4.1.4         <td>sparc-sun-sunos4.1.4
 <tr><td>SPARC    <td>Debian GNU/Linux 2.2<td>sparc-linux
     <td><a href="mailto:bcollins@debian.org">Ben Collins</a>
-<tr><td>ARM      <td>Linux               <td>
+<tr><td>ARM      <td>GNU/Linux           <td>
 <tr><td>Intel x86<td>Cygwin              <td>i686-pc-cygwin
 </table>
 
@@ -341,8 +345,8 @@ measurement?
 <li>Should we use flags higher than <code>-O2 -g</code> when
 bootstrapping?  (Probably we should have a matrix of various flags, as
 in previous releases.)
-<li>Should we add PowerPC Linux to the list of platforms?
-<li>Should we use Tru64 in place of Alpha Linux?
+<li>Should we add PowerPC GNU/Linux to the list of platforms?
+<li>Should we use Tru64 in place of Alpha GNU/Linux?
 <li>Should we eliminate setjmp/longjmp exception-handling?
 <li>Which open bugs need to be fixed?
 </ul>
