* build-snapshot.html: Add --enable-libstdcxx-v3     * faq.html: Mention the iconv bug and workaround

--- a/htdocs/java/build-snapshot.html
+++ b/htdocs/java/build-snapshot.html
@@ -78,10 +78,13 @@ They are made nightly.
   $ cd egcs
   $ mkdir objdir
   $ cd objdir
-  $ ../configure --enable-threads=posix --prefix=/home/joerg/gcc \ 
-     --with-as=/opt/gnu/bin/as --with-ld=/opt/gnu/bin/ld
+  $ ../configure --enable-threads=posix --prefix=/home/joerg/gcc \
+    --enable-libstdcxx-v3 --with-as=/opt/gnu/bin/as --with-ld=/opt/gnu/bin/ld
   $ make bootstrap
   $ make install
+
+The "--enable-libstdcxx-v3" is now required to build libgcj, because
+otherwise you wont get a libsupc++.
 
 If you compile under Linux you could omit the last two options. Under
 Solaris you'll need them. If you omit '--prefix' the compiled source will 
