--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -106,6 +106,7 @@
               heap sizes?</a> 
             <li><a href="#5_6">How can I profile my application?</a> 
 	    <li><a href="#5_7">I'm getting 'undefined symbol: __dso_handle'</a>
+	    <li><a href="#5_8">My program seems to hang and doesn't produce any output</a>
           </ol>
         <li><a href="#6_0">Programing Issues</a> 
           <ol>
@@ -782,7 +783,19 @@ $ ../configure [...]
 	</sl>
 	</blockquote>
       </dl>      
-      
+
+    <hr>  
+    <dl>
+	<dt>
+      <h3><a name="5_8">5.8 My program seems to hang and doesn't produce any output</a></h3>
+	</dt>
+    <dd>
+    There seems to be a bug in the current iconv support. You can work around
+    it for now by setting <tt>LANG=en_US.UTF-8</tt> at runtime. Or give the
+    following option during compile time <tt>-Dfile.encoding=UTF-8</tt>.
+    </dd>
+    </dl>
+
       <p> 
       <table width="100%" border="0">
         <tr bgcolor="#B0D0FF" align="left"> 
@@ -809,7 +822,7 @@ $ ../configure [...]
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: faq.html,v 1.26 2000/06/28 04:54:21 apbianco Exp $ </small></address>
+<small> $Id: faq.html,v 1.28 2000/07/08 18:27:35 green Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
