Small HTML fixes

--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -769,8 +769,8 @@ $ ../configure [...]
 	<dt>
           <h3><a name="5_7">5.7 I'm getting 'undefined symbol: __dso_handle'</a></h3>
 	</dt>
-	<blockquote>
-	<p>Some versions of the GNU linker have broken support for the '.hidden'
+	<dd>
+	Some versions of the GNU linker have broken support for the '.hidden'
 	directive, which results in problems with shared libraries built with
 	recent versions of gcc.	
 	<p>
@@ -780,8 +780,8 @@ $ ../configure [...]
 	  <li>upgrade to a recent CVS binutils, or
 	  <li>undef the HAVE_GAS_HIDDEN definition in gcc's auto-host.h
 	  (and rebuild gcc).
-	</sl>
-	</blockquote>
+	</ul>
+	</dd>
       </dl>      
 
     <hr>  
@@ -822,7 +822,7 @@ $ ../configure [...]
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: faq.html,v 1.28 2000/07/08 18:27:35 green Exp $ </small></address>
+<small> $Id: faq.html,v 1.29 2000/10/17 19:42:06 mark Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
