--- a/htdocs/bugs/index.html
+++ b/htdocs/bugs/index.html
@@ -13,11 +13,8 @@
 
 <h1><a name="report">Reporting Bugs</a></h1>
 
-<p>The <a href="onlinedocs/">gcc info manual</a>, section Bugs contains
-complete instructions on how to report bugs.
-The manual can also be read using `<i>M-x <tt>info</tt></i>' in Emacs, or if
-the GNU <tt>info</tt> program is installed on your system by `<tt>info --node
-"(gcc)Bugs"</tt>'.
+<p>Our preferred way of receiving bugs is via our <a href="gnats.html">GNATS
+bug reporting system</a>.</p>
 
 <p>Before you report a bug, please check the <a href="#known">list of
 well-known bugs</a> and, if possible, try a newer development snapshot
