--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -47,6 +47,8 @@ GNU Compiler Collection on your machine.</p>
 <hr>
 <h3><a name="alpha*-dec-linux*">alpha*-dec-linux*</a></h3>
 
+<p>We strongly recommend to upgrade to binutils 2.10 (or newer).</p>
+
 <p>GNU/Linux Alpha EV56 or PCA56 hosts running Red Hat 4.2 or 5.0 may
 see errors of this sort:</p>
 <pre>
@@ -59,7 +61,7 @@ generate BWX insns for your machine.</p>
 it will silently generate incorrect code.  The version shipped with
 Red Hat 5.0 (2.8.0.1) is not broken, but required an extra -m21164a
 argument on the command-line.  In order to visibly trap 2.7.0.2,
-I now issue DEC's .arch pseudo into the assembly.  Relieving the
+GCC now issues DEC's .arch pseudo into the assembly.  Relieving the
 problem of mucking with command-line arguments for 2.8.0.1 is a
 pleasant side effect.</p>
 
