* index.html, proj-cpplib.html: Update for recent work.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -177,9 +177,8 @@ particularly when complex macros are used.</p>
 <dd>
 Neil Booth has contributed a new lexer and macro-expander for the C
 preprocessor.  The lexer makes a single pass over the source files,
-whereas previously it made two.  The macro expander works without
-re-scanning for nested macros to expand, and operates on lexical
-tokens instead of text strings.
+whereas previously it made two.  The macro expander operates on
+lexical tokens instead of text strings.
 
 <p>ISO C, C++, and Objective C use the new preprocessor.  Traditional
 (K+R) C, Fortran, and Chill use an older implementation (taken from
