* contrib.html: Mention commits and Gnats.

--- a/htdocs/java/contrib.html
+++ b/htdocs/java/contrib.html
@@ -154,7 +154,13 @@ projects</a>.
     <p>The commit message given to cvs should be the ChangeLog entry.
       If you wrote the entry (your name is at the top), then don't
       include the header.  If someone else wrote the entry, do include
-      the header.
+      the header.  It is customary to make the <tt>cvs commit</tt> log
+      message the same as the ChangeLog entry.
+
+    <p>If your change fixes a PR, put the text (e.g.)
+      <tt>Fixes PR gcj/58</tt> into the ChangeLog entry and into the
+      cvs commit message.  This will cause an automatic message to be
+      sent to Gnats to record the commit in the PR.
 
     <p>After checking in a fix which fixes a PR, put the PR into
       ``feedback'' mode.  This will send email to the bug's
@@ -203,7 +209,7 @@ projects</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: contrib.html,v 1.5 2000/06/28 04:54:21 apbianco Exp $
+$Id: contrib.html,v 1.6 2000/07/05 06:07:44 kingdon Exp $
 </small>
 </address>
 
