* contrib.html: Mention coding style.  Text from Bryce.

--- a/htdocs/java/contrib.html
+++ b/htdocs/java/contrib.html
@@ -75,8 +75,21 @@ projects</a>.
 
   <p>Note that the GNU Coding Standards do not actually cover Java
   programming style.  libgcj largely uses the obvious extrapolation
-  from the GNU C style, but there are some differences.  These aren't
-  yet written down, but we'll make them available shortly.
+  from the GNU C style, but there are some differences.
+
+  <p>The changes are something like this:
+  <ul>
+  <li> Open braces go on a new line (like GNU C style)
+
+  <li> Two space indent for methods and inner classes
+
+  <li> <tt>if</tt>, <tt>try</tt>, <tt>for</tt>, and
+    <tt>synchronized</tt> blocks are indented four spaces (the braces are
+    indented two spaces, then the code an additional two spaces)
+
+  <li> The open brace for a method body is indented only as far as the
+    method header
+  </ul>
 
   <p>
 
@@ -158,7 +171,7 @@ projects</a>.
       message the same as the ChangeLog entry.
 
     <p>If your change fixes a PR, put the text (e.g.)
-      <tt>Fixes PR gcj/58</tt> into the ChangeLog entry and into the
+      ``<tt>Fixes PR gcj/58</tt>'' into the ChangeLog entry and into the
       cvs commit message.  This will cause an automatic message to be
       sent to Gnats to record the commit in the PR.
 
@@ -209,7 +222,7 @@ projects</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: contrib.html,v 1.6 2000/07/05 06:07:44 kingdon Exp $
+$Id: contrib.html,v 1.7 2000/10/29 22:03:13 tromey Exp $
 </small>
 </address>
 
