* projects.html: Updated for work on the jar project.

--- a/htdocs/java/projects.html
+++ b/htdocs/java/projects.html
@@ -76,13 +76,7 @@ This is preferable to creating one written in java because it doesn't
 require java running on the host development system when building a
 cross compiler.  Once it has been imported, the following tasks remain:
 <ul>
-<li>finish java.util.jar
-<li>implement support in the compiler for reading compressed archives
-<li>modify gij to obey the <tt>main</tt> specification found in jar
-file manifests, so we can just run <tt>gij MyApp.jar</tt>.
 <li>modify gcj to obey the contraints layed out by the jar file manifest file.
-<li>modify our runtime to obey all of these same rules when loading from 
-jar files.
 </ul>
 <p>
 
@@ -311,7 +305,7 @@ Runtime improvements
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: projects.html,v 1.11 2000/06/28 04:54:21 apbianco Exp $
+$Id: projects.html,v 1.12 2000/07/05 06:08:38 kingdon Exp $
 </small>
 </address>
 
