Chaneg www.gnu.ai.mit.edu to www.gnu.org.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -19,7 +19,7 @@ contributions must meet.</p>
 <h2>Coding Standards</h2>
 
   <p>All contributions must conform to the <a
-  href="http://www.gnu.ai.mit.edu/prep/standards_toc.html">GNU Coding
+  href="http://www.gnu.org/prep/standards_toc.html">GNU Coding
   Standards</a>.  Submissions which do not conform to the standards will
   be returned with a request to reformat the changes.
 
