* c99status.html: _Pragma implemented.

--- a/htdocs/c99status.html
+++ b/htdocs/c99status.html
@@ -227,7 +227,7 @@ paragraph 6) do not count as library issues.</p>
 </tr>
 
 <tr><td><em><code>_Pragma</code> preprocessing operator</em></td>
-    <td></td><td></td><td></td><td>Missing</td>
+    <td></td><td>Done</td><td></td><td></td>
 </tr>
 
 <tr><td><em>standard pragmas</em></td>
