Add mirror in Korea.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -13,7 +13,7 @@ gcc.gnu.org server is in California in the US.  Please let us know
 if you are mirroring the GCC pages so we can note it here!
 
 <ul>
-<li>Australia: <a href="ftp://mirror.aarnet.edu.au/pub/egcs/">mirror.aarnet.edu.au</a>
+<li>Australia: <a href="ftp://mirror.aarnet.edu.au/pub/gcc/">mirror.aarnet.edu.au</a>
 <li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/gcc/">gd.tuwien.ac.at</a>
 <li>Belgium (Ghent): <a href="ftp://chardonnay.elis.rug.ac.be/pub/mirrors/gcc.cygnus.com/pub/gcc/">chardonnay.elis.rug.ac.be</a>
 <LI>Brasil (releases only, no snapshots): <a href="ftp://ftp.softaplic.com.br/pub/sourceware/gcc/">ftp.softaplic.com.br</a>
@@ -42,6 +42,7 @@ if you are mirroring the GCC pages so we can note it here!
 <li>Japan: <a href="ftp://ring.crl.go.jp/pub/lang/egcs/">ring.crl.go.jp</a>
 <li>Japan: <a href="ftp://core.ring.gr.jp/pub/lang/egcs/">core.ring.gr.jp</a>
 <li>Japan: <a href="ftp://ftp.ring.gr.jp/pub/lang/egcs/">ftp.ring.gr.jp</a>
+<li>Korea (Seoul): <a href="ftp://linux.sarang.net/mirror/development/compiler/egcs/">linux.sarang.net</a>
 <LI>Nijmegen, Netherlands: <A HREF="ftp://ftp.nluug.nl/mirror/languages/gcc">ftp.nluug.nl</a>, thanks to <a href="mailto:jc@ATComputing.nl">Jan Cristiaan van Winkel</a>!
 <LI>Norway: <a href="ftp://ftp.pvv.ntnu.no/pub/egcs/">ftp.pvv.ntnu.no</a>
 <LI>Poland: <A HREF="ftp://ftp.task.gda.pl/mirror/egcs.cygnus.com/pub/egcs/">ftp.task.gda.pl</a>
