--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -151,6 +151,9 @@ Successful
 <p><b>mips-dec-ultrix4.4</b><br>
 Successful
 
+<p><b>mips-sgi-irix5.3</b><br>
+Successful
+
 <p><b>mips-sgi-irix6.2</b><br>
 Successful
 
