--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -20,7 +20,7 @@ existing release.</p>
      <li><a href="http://gcc.gnu.org/onlinedocs/g77_news.html">G77 News</a>
      <li><a href="http://gcc.gnu.org/onlinedocs/g77_bugs.html">G77 Bugs</a>
   </ul>
-  <li><a href="http://gcc.gnu.org/onlinedocs/c-tree.html">Tree Representation Internals</a>
+  <li><a href="http://gcc.gnu.org/onlinedocs/c-tree_toc.html">Tree Representation Internals</a>
   <li><a href="http://gcc.gnu.org/onlinedocs/gxxint_toc.html">G++ Internals Manual</a>
   <li><a href="http://gcc.gnu.org/onlinedocs/cpp_toc.html">CPP Manual</a>
   <li><a href="http://gcc.gnu.org/onlinedocs/gcov_toc.html">GCOV Manual</a>
