--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -55,6 +55,9 @@ Successful
 <p><b>alphaev6-dec-osf4.0f</b><br>
 Successful
 
+<p><b>alphaev6-dec-osf5.0</b><br>
+Successful
+
 <p><b>alphaev6-unknown-linux-gnu</b><br>
 Successful
 
