--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -124,6 +124,9 @@ Successful
 <p><b>i386-pc-solaris2.7</b><br>
 Successful
 
+<p><b>i386-pc-solaris2.8</b><br>
+Successful
+
 <p><b>i486-pc-linux-gnulibc1</b><br>
 Successful
 
