Partial update from version on www.gnu.org.

--- a/htdocs/fsf-forms/copyrights.html
+++ b/htdocs/fsf-forms/copyrights.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html PUBLIC "-//IETF//DTD HTML 2.0//EN">
 <HTML>
 <HEAD>
-<!-- This HTML file has been created by texi2html 1.49
-     from standards/maintain.texi on 5 August 1997 -->
+<!-- This HTML file has been created by texi2html 1.54
+     from maintain.texi on 22 September 2000 -->
 
-<TITLE>Information For Maintainers of GNU Software - Copyrights - GNU Project - Free Software Foundation (FSF)</TITLE>
-<LINK REV="made" HREF="mailto:webmasters@www.gnu.ai.mit.edu">
+<TITLE>Information For Maintainers of GNU Software - Copyright Papers - GNU Project - Free Software Foundation (FSF)</TITLE>
+<LINK REV="made" HREF="mailto:webmasters@www.gnu.org">
 </HEAD>
 <BODY BGCOLOR="#FFFFFF" TEXT="#000000" LINK="#1F00FF" ALINK="#FF0000" VLINK="#9900DD">
 
 <blockquote>
   <i>This file copied from <a
-  href="http://www.gnu.ai.mit.edu/prep/maintain_toc.html">http://www.gnu.ai.mit.edu/prep/maintain_toc.html</a>
+  href="http://www.gnu.org/prep/maintain_toc.html">http://www.gnu.org/prep/maintain_toc.html</a>
   with a couple of links added.</i>
 </blockquote>
 
-<H2>Copyrights</H2>
+<H2>Copyright Papers</H2>
 
 <P>
-For the sake of registering the copyright on later versions of the
-software, you need to keep track of each person who makes significant
-changes.  A change of ten lines or so, or a few such changes, in a
-large program is not significant.
+If you maintain an FSF-copyrighted package, then you should follow
+certain legal procedures when incorporating changes written by other
+people.  This ensures that the FSF has the legal right to distribute the
+package, and the right to defend its free status in court if necessary.
 
 </P>
 <P>
-<STRONG>Before</STRONG> incorporating significant changes, make sure that person
-has signed copyright papers and that the Free Software Foundation has
-received and signed them.
+<STRONG>Before</STRONG> incorporating significant changes, make sure that the
+person who wrote the changes has signed copyright papers and that the
+Free Software Foundation has received and signed them.
 
 </P>
 <P>
 To check whether papers have been received, look in
 <TT>`/gd/gnuorg/copyright.list'</TT>.  If you can't look there directly,
-<CODE>fsf-records@prep.ai.mit.edu</CODE> can check for you, and can also
-check for papers that are waiting to be entered and inform you
-when expected papers arrive.
+<A HREF="mailto:fsf-records@gnu.org"><TT>fsf-records@gnu.org</TT></A> can check for you.  Our clerk can also
+check for papers that are waiting to be entered and inform you when
+expected papers arrive.
 
 </P>
 <P>
@@ -50,7 +50,7 @@ this:
 <BLOCKQUOTE>
 <P>
 Would you be willing to assign the copyright to the Free Software
-Foundation, so that we could install it in @enddots{}
+Foundation, so that we could install it in <VAR>program</VAR>?
 </BLOCKQUOTE>
 
 <P>
@@ -65,7 +65,7 @@ in the public domain, so that we can install it in @enddots{}
 </BLOCKQUOTE>
 
 <P>
-If person wants more information, you can send per
+If the contributor wants more information, you can send per
 <TT>`<a href="conditions.text">/gd/gnuorg/conditions.text</a>'</TT>, which explains per options (assign
 vs. disclaim) and their consequences.
 
@@ -124,9 +124,9 @@ software.  For smaller changes, use
 <P>
 If a contributor is reluctant to sign an assignment for a large change,
 and is willing to sign a disclaimer instead, that is acceptable, so you
-should offer this alternative if it seems useful.  While we prefer an
-assignment for a larger change, so that we can enforce the GNU GPL for
-the new text, a disclaimer is enough to let us use the text.
+should offer this alternative if it helps you reach agreement.  We
+prefer an assignment for a larger change, so that we can enforce the GNU
+GPL for the new text, but a disclaimer is enough to let us use the text.
 
 </P>
 <P>
@@ -142,27 +142,27 @@ is sufficient to let us use the work.
 <P>
 <STRONG>Although there are other templates besides the ones listed here,
 they are for special circumstances; please do not use them without
-getting advice from Richard Stallman.</STRONG>
+getting advice from <A HREF="mailto:legal@gnu.org"><TT>legal@gnu.org</TT></A>.</STRONG>
 
 </P>
 <P>
-If you are not sure what to do, then please ask Richard Stallman for
+If you are not sure what to do, then please ask <A HREF="mailto:legal@gnu.org"><TT>legal@gnu.org</TT></A> for
 advice; if the contributor asks you questions about the meaning and
 consequences of the legal papers, and you don't know the answers, you
-can forward them to Stallman.
+can forward them to <A HREF="mailto:legal@gnu.org"><TT>legal@gnu.org</TT></A> and we will answer.
 
 </P>
 <P>
 <STRONG>Please do not try changing the wording of a template yourself.
-If you think a change is needed, please talk with Richard Stallman, who
-will work with a lawyer to decide what to do.</STRONG>
+If you think a change is needed, please talk with <A HREF="mailto:legal@gnu.org"><TT>legal@gnu.org</TT></A>,
+and we will work with a lawyer to decide what to do.</STRONG>
 
 </P>
 <P><HR><P>
 
 <blockquote>
   <i>This file copied from <a
-  href="http://www.gnu.ai.mit.edu/prep/maintain_toc.html">http://www.gnu.ai.mit.edu/prep/maintain_toc.html</a>
+  href="http://www.gnu.org/prep/maintain_toc.html">http://www.gnu.org/prep/maintain_toc.html</a>
   with a couple of links added.</i>
 </blockquote>
 
