Add documentation for GCC's coding conventions.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -20,8 +20,10 @@ contributions must meet.</p>
 
   <p>All contributions must conform to the <a
   href="http://www.gnu.org/prep/standards_toc.html">GNU Coding
-  Standards</a>.  Submissions which do not conform to the standards will
-  be returned with a request to reformat the changes.
+  Standards</a>.  There are also some <a
+  href="codingconventions.html">additional coding conventions for
+  GCC</a>.  Submissions which do not conform to the standards will be
+  returned with a request to reformat the changes.
 
 <h2>Copyright Assignment</h2>
 
